añado carpetas y termino proyecto

--- a/index.html
+++ b/index.html
@@ -4,12 +4,19 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + TS</title>
+    <title>Personajes Mortadelo y Filemon</title>
   </head>
   <body>
-    <div id="app">
-      <h1>TypeScript Sandbox</h1>
-    </div>
+        <div class="container">
+          <div>
+            <h1>Personajes de Mortadelo y Filemón</h1>
+              <div class="filtro">
+                <input id="escribirNombre" type="text"></input>
+                <button id="botonFiltrar">Filtrar</button>
+              </div>
+          </div>
+          <div id="resultado" class="resultado"></div>
+        </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
